--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "@testing-library/user-event": "^13.5.0",
     "date-fns": "^2.29.3",
     "firebase": "^9.16.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loading": "^2.0.3",
     "react-loading-skeleton": "^3.1.0",
     "react-router": "^6.7.0",
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
-    "prop-types": "^15.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -56,6 +57,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.1",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "react-loading": "^2.0.3",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.21",
     "postcss-cli": "^10.1.0",
